--- a/stlyle.css
+++ b/stlyle.css
@@ -9,3 +9,108 @@
 
     font-family: 'Mulish', sans-serif;
 */
+
+* {
+    margin: 0;
+    padding: 0;
+    border: none;
+    text-decoration: none;
+    box-sizing: border-box;
+}
+
+html {
+    /* font-size: 62.5%; */
+}
+
+header {
+    width: 100%;
+    height: 100vh;
+    overflow: hidden;
+    position: relative;
+}
+
+.img-wrapper {
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    background-color: rgba(0, 0, 0, 0.8);
+}
+
+.img-wrapper img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    opacity: 0.5;
+    animation: zoom 5s;
+}
+
+@keyframes zoom {
+    0% {
+        transform: scale(1.5);
+    }
+    100% {
+        transform: scale(1);
+    }
+}
+
+.banner {
+    position: absolute;
+    top: 30%;
+    left: 15%;
+}
+
+@keyframes moveBanner {
+    0% {
+        transform: translateY(10rem);
+        transform: rotateY(-30);
+    }
+    100% {
+        transform: translateY(0rem);
+        transform: rotateY(0);
+        opacity: 1;
+    }
+}
+
+.banner h1 {
+    color: #ffffff;
+    font-size: 3.5rem;
+    font-family: 'Baloo Da 2', cursive;
+    line-height: 5rem;
+    font-weight: 200;
+    text-shadow: .2rem, .3rem, 2px, rgb(0, 0, 0);
+    -webkit-text-stroke: 1rem, 2rem, 2px rgba(0, 0, 0, 0.8);
+    margin-bottom: 2rem;
+    opacity: 0;
+    animation: moveBanner 1s .5s forwards;
+}
+
+.banner p {
+    margin-bottom: 2rem;
+    font-weight: 600;
+    font-family: 'Josefin Slab', serif;
+    color: #fff;
+    font-size: 2rem;
+    text-shadow: 1rem, 2rem, 2px, rgb(0, 0, 0);
+    -webkit-text-stroke: 1rem, 2rem, 2px rgba(0, 0, 0, 0.8);
+    opacity: 0;
+    animation: moveBanner 1s .7s forwards;
+}
+
+.banner button {
+    font-family: 'Mulish', sans-serif;
+    font-size: 1.2rem;
+    color: #26263d;
+    background: linear-gradient(to right, #00b4db, #0083b0);
+    padding: 1rem 2rem;
+    border-radius: .8rem;
+    text-transform: uppercase;
+    opacity: 0;
+    animation: moveBanner 1s .9s forwards;
+}
+
+.banner button:hover {
+    opacity: .9;
+    color: white;
+    cursor: pointer;
+    transition: .7s;
+}
