--- a/stlyle.css
+++ b/stlyle.css
@@ -1,7 +1,6 @@
-@import url('https://fonts.googleapis.com/css2?family=Baloo+Da+2:wght@400;500;600;700&family=Josefin+Slab:ital,wght@0,300;0,400;0,600;0,700;1,300;1,400;1,600;1,700&family=Mulish:ital,wght@0,200;0,300;0,400;0,500;1,200;1,300;1,400&display=swap');
-@import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0-2/css/all.min.css');
-
-/*  CSS rules to specify families
+    @import url('https://fonts.googleapis.com/css2?family=Baloo+Da+2:wght@400;500;600;700&family=Josefin+Slab:ital,wght@0,300;0,400;0,600;0,700;1,300;1,400;1,600;1,700&family=Mulish:ital,wght@0,200;0,300;0,400;0,500;1,200;1,300;1,400&display=swap');
+    @import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0-2/css/all.min.css');
+    /*  CSS rules to specify families
 
     font-family: 'Baloo Da 2', cursive;
 
@@ -9,108 +8,255 @@
 
     font-family: 'Mulish', sans-serif;
 */
-
-* {
-    margin: 0;
-    padding: 0;
-    border: none;
-    text-decoration: none;
-    box-sizing: border-box;
-}
-
-html {
-    /* font-size: 62.5%; */
-}
-
-header {
-    width: 100%;
-    height: 100vh;
-    overflow: hidden;
-    position: relative;
-}
-
-.img-wrapper {
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
-    background-color: rgba(0, 0, 0, 0.8);
-}
-
-.img-wrapper img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    opacity: 0.5;
-    animation: zoom 5s;
-}
-
-@keyframes zoom {
-    0% {
-        transform: scale(1.5);
+    
+    * {
+        margin: 0;
+        padding: 0;
+        border: none;
+        text-decoration: none;
+        box-sizing: border-box;
+        list-style: none;
+        text-decoration: none;
     }
-    100% {
-        transform: scale(1);
+    
+     :root {
+        --font-primary: 'Baloo Da 2', cursive;
+        --font-secondary: 'Josefin Slab', serif;
+        --font-action: 'Mulish', sans-serif;
     }
-}
-
-.banner {
-    position: absolute;
-    top: 30%;
-    left: 15%;
-}
-
-@keyframes moveBanner {
-    0% {
-        transform: translateY(10rem);
-        transform: rotateY(-30);
+    
+    .hamburger {
+        /* background-color: red; */
+        width: 2rem;
+        height: 2rem;
+        position: fixed;
+        z-index: 100;
+        right: 2rem;
+        top: 2rem;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+        cursor: pointer;
+        transition: .9s, forwards .2s;
     }
-    100% {
-        transform: translateY(0rem);
-        transform: rotateY(0);
+    
+    .show-menu .hamburger {
+        right: 16rem;
+    }
+    
+    .line {
+        width: 90%;
+        margin: 0;
+        padding: 0;
+        position: relative;
+        height: .2rem;
+        background-color: rgb(255, 255, 255);
+        box-shadow: .2rem .2rem rgb(92, 86, 86);
+        border-radius: .8rem;
+        transition: transform 1s;
+    }
+    
+    .show-menu #line1 {
+        transform: rotate(45deg) translate(.5rem, .55rem);
+        background-color: black;
+        box-shadow: none;
+    }
+    
+    .show-menu #line2 {
+        opacity: 0;
+        visibility: hidden;
+    }
+    
+    .show-menu #line3 {
+        transform: rotate(-45deg) translate(.2rem, -.3rem);
+        background-color: black;
+        box-shadow: none;
+    }
+    
+    .hamburger span {
+        position: absolute;
+        left: 3rem;
+        height: 2.5rem;
+        width: 6rem;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        color: #d4d4f5;
+        background: #0083b0;
+        padding: 1rem 2rem;
+        border-radius: .88rem;
+        font-family: var(--font-action);
+        text-shadow: .05rem .05rem rgba(0, 0, 0, .8);
+        opacity: 0;
+        transition: 1s;
+    }
+    
+    .hamburger span::before {
+        content: '';
+        position: absolute;
+        border-right: .5rem solid #0083b0;
+        border-top: .5rem solid transparent;
+        border-left: .5rem solid transparent;
+        border-bottom: .5rem solid transparent;
+        left: -1rem;
+    }
+    
+    .show-menu .hamburger:hover span {
         opacity: 1;
     }
-}
-
-.banner h1 {
-    color: #ffffff;
-    font-size: 3.5rem;
-    font-family: 'Baloo Da 2', cursive;
-    line-height: 5rem;
-    font-weight: 200;
-    text-shadow: .2rem, .3rem, 2px, rgb(0, 0, 0);
-    -webkit-text-stroke: 1rem, 2rem, 2px rgba(0, 0, 0, 0.8);
-    margin-bottom: 2rem;
-    opacity: 0;
-    animation: moveBanner 1s .5s forwards;
-}
-
-.banner p {
-    margin-bottom: 2rem;
-    font-weight: 600;
-    font-family: 'Josefin Slab', serif;
-    color: #fff;
-    font-size: 2rem;
-    text-shadow: 1rem, 2rem, 2px, rgb(0, 0, 0);
-    -webkit-text-stroke: 1rem, 2rem, 2px rgba(0, 0, 0, 0.8);
-    opacity: 0;
-    animation: moveBanner 1s .7s forwards;
-}
-
-.banner button {
-    font-family: 'Mulish', sans-serif;
-    font-size: 1.2rem;
-    color: #26263d;
-    background: linear-gradient(to right, #00b4db, #0083b0);
-    padding: 1rem 2rem;
-    border-radius: .8rem;
-    text-transform: uppercase;
-    opacity: 0;
-    animation: moveBanner 1s .9s forwards;
-}
-
-.banner button:hover {
-    opacity: .9;
-    color: white;
-    cursor: pointer;
-    transition: .7s;
-}
+    
+    header {
+        width: 100%;
+        height: 100vh;
+        overflow: hidden;
+        position: relative;
+    }
+    
+    .img-wrapper {
+        width: 100%;
+        height: 100%;
+        overflow: hidden;
+        background-color: rgba(0, 0, 0, 0.8);
+    }
+    
+    .img-wrapper img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        opacity: 0.5;
+        animation: zoom 5s;
+    }
+    
+    @keyframes zoom {
+        0% {
+            transform: scale(1.5);
+        }
+        100% {
+            transform: scale(1);
+        }
+    }
+    
+    .banner {
+        position: absolute;
+        top: 30%;
+        left: 15%;
+    }
+    
+    .banner h1 {
+        color: #ffffff;
+        font-size: 3.5rem;
+        font-family: var(--font-primary);
+        line-height: 5rem;
+        font-weight: 200;
+        text-shadow: .1rem .2rem 2px rgb(0, 0, 0);
+        margin-bottom: 2rem;
+        opacity: 0;
+        animation: moveBanner 1s .5s forwards;
+    }
+    
+    .banner p {
+        margin-bottom: 2rem;
+        font-weight: 600;
+        font-family: var(--font-secondary);
+        color: #fff;
+        font-size: 2rem;
+        text-shadow: .1rem .1rem 2px rgb(0, 0, 0);
+        opacity: 0;
+        animation: moveBanner 1s .7s forwards;
+    }
+    
+    .banner button {
+        font-family: var(--font-action);
+        font-size: 1.2rem;
+        color: #3e3e99;
+        background: linear-gradient(to right, #00b4db, #0083b0);
+        padding: 1rem 2rem;
+        border-radius: .8rem;
+        text-transform: uppercase;
+        text-shadow: .05rem .05rem rgba(0, 0, 0, .8);
+        opacity: 0;
+        animation: moveBanner 1s .9s forwards;
+    }
+    
+    .banner button:hover {
+        color: rgb(211, 211, 211);
+        cursor: pointer;
+        transition: .7s;
+    }
+    
+    @keyframes moveBanner {
+        0% {
+            transform: translateY(10rem);
+            transform: rotateY(-30);
+            transform: rotateX(-60);
+        }
+        100% {
+            transform: translateY(0rem);
+            transform: rotateY(0);
+            transform: rotateX(0);
+            opacity: 1;
+        }
+    }
+    
+    .sidebar {
+        width: 20rem;
+        height: 100vh;
+        background-color: #ffffff;
+        position: fixed;
+        top: 0;
+        right: -20rem;
+        transition: 1s;
+    }
+    
+    .show-menu .sidebar {
+        right: 0;
+    }
+    
+    .menu {
+        position: absolute;
+        top: 40%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+    }
+    
+    .menu-item {
+        text-align: center;
+        margin-bottom: 1rem;
+    }
+    
+    .menu-link {
+        font-family: var(--font-action);
+        font-size: 2rem;
+        font-weight: 600;
+        color: #555;
+        transition: color 1s;
+    }
+    
+    .menu-link:hover {
+        color: #0083b0;
+    }
+    
+    .social-media {
+        /* background-color: red; */
+        position: absolute;
+        bottom: 2rem;
+        width: 100%;
+        display: flex;
+        justify-content: space-evenly;
+    }
+    
+    .social-media i {
+        color: #555;
+        height: 3rem;
+        width: 3rem;
+        font-size: 2rem;
+        text-align: center;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        transition: color 1s;
+    }
+    
+    .social-media i:hover {
+        color: #0083b0;
+    }
