--- a/stlyle.css
+++ b/stlyle.css
@@ -23,6 +23,7 @@
         --font-primary: 'Baloo Da 2', cursive;
         --font-secondary: 'Josefin Slab', serif;
         --font-action: 'Mulish', sans-serif;
+        --blue-Rumos: #0083b0;
     }
     
     .hamburger {
@@ -306,14 +307,15 @@
     
     .sessao-conhecimentos {
         background-color: #f5f5f5;
+        height: 100vh;
     }
     
     .sessao-header h1 {
         font-family: var(--font-primary);
         font-size: 3rem;
-        color: #555;
+        color: var(--blue-Rumos);
         border-bottom: solid 3px #0083b0;
-        margin-bottom: 2rem;
+        margin-bottom: 7rem;
     }
     
     .conhecimento-header {
@@ -325,17 +327,19 @@
         padding: .7rem;
         font-family: var(--font-secondary);
         font-size: 2rem;
+        color: var(--blue-Rumos);
     }
     
     .conhecimento-header i {
         font-size: 2.5rem;
-        color: #555;
+        color: var(--blue-Rumos);
     }
     
     .conhecimento-text {
         font-family: var(--font-secondary);
         margin-top: 1rem;
         text-align: justify;
+        color: rgba(0, 131, 176, .7);
     }
     
     .conhecimentos-img-wrapper {
@@ -347,4 +351,102 @@
     .conhecimentos-img-wrapper img {
         object-fit: cover;
         width: 100%;
+    }
+    
+    .sessao-projetos {
+        height: 100vh;
+        background-color: #f5f5f5;
+    }
+    
+    .projetos {
+        display: flex;
+        justify-content: space-evenly;
+    }
+    
+    .card {
+        width: 20rem;
+        height: 35rem;
+        position: relative;
+    }
+    
+    .card-img-wrapper {
+        width: 100%;
+        height: 100%;
+        background-color: rgb(68, 68, 68);
+        border-radius: .5rem;
+    }
+    
+    .card-img-wrapper img {
+        object-fit: cover;
+        width: 100%;
+        height: 100%;
+        border-radius: .5rem;
+        opacity: .4;
+        transition: opacity .3s;
+    }
+    
+    .card:hover .card-img-wrapper img {
+        opacity: .2;
+    }
+    
+    .card-info {
+        opacity: 0;
+        visibility: hidden;
+        position: absolute;
+        bottom: 0;
+        padding: 2rem;
+        text-shadow: .1rem 0.1rem 0.1rem rgba(0, 0, 0, .8);
+        transition: all 1s;
+    }
+    
+    .card-info h2 {
+        font-family: var(--font-primary);
+        font-size: 2rem;
+        font-weight: 500;
+        color: #e6e6e9;
+    }
+    
+    .card-info h3 {
+        font-family: var(--font-secondary);
+        font-size: 1rem;
+        font-weight: bolder;
+        color: #ffffff;
+        margin-bottom: 1.5rem;
+    }
+    
+    .card-info p {
+        font-family: var(--font-secondary);
+        font-size: 1rem;
+        font-weight: 600;
+        color: #f0d9d9;
+        text-shadow: .1rem 0.1rem 0.1rem rgba(0, 0, 0, 81);
+        text-shadow: 0rem 0.1rem 0.1rem rgba(0, 0, 0, .3);
+        margin-bottom: 2rem;
+    }
+    
+    .card-info button {
+        font-family: var(--font-action);
+        font-size: 1.1rem;
+        color: #3e3e99;
+        background: linear-gradient(to right, #00b4db, #0083b0);
+        padding: 1rem 1rem;
+        border-radius: .5rem;
+        text-shadow: .05rem .05rem rgba(0, 0, 0, .8);
+        width: 8.5rem;
+        height: 2.5rem;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    
+    .card-info button:hover {
+        color: rgb(211, 211, 211);
+        cursor: pointer;
+        transition: .7s;
+    }
+    
+    .card:hover .card-info {
+        bottom: 2rem;
+        opacity: 1;
+        visibility: visible;
     }
