--- a/stlyle.css
+++ b/stlyle.css
@@ -443,10 +443,121 @@
         color: rgb(211, 211, 211);
         cursor: pointer;
         transition: .7s;
+        opacity: .8;
     }
     
     .card:hover .card-info {
         bottom: 2rem;
         opacity: 1;
         visibility: visible;
+    }
+    
+    .sessao-contato {
+        width: 100%;
+        height: 100vh;
+        background-color: #242424;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    
+    .contato-wrapper {
+        width: 60%;
+        display: flex;
+        box-shadow: 0 2rem 3rem rgba(0, 0, 0, .5);
+    }
+    
+    .contato-left {
+        width: 35%;
+        height: 40rem;
+        background: url(/img/contato.png);
+        background-size: 90%;
+        background-repeat: no-repeat;
+        background-position: center;
+    }
+    
+    .contato-right {
+        width: 65%;
+        background-color: #eee;
+        padding: 1rem 3rem 3rem 3rem;
+    }
+    
+    .contato-right h1 {
+        font-family: var(--font-primary);
+        font-size: 3rem;
+        font-weight: 500;
+        color: var(--blue-Rumos);
+        margin-bottom: 3rem;
+        text-align: center;
+    }
+    
+    .sessao-contato form {
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+    }
+    
+    .input-group {
+        position: relative;
+    }
+    
+    .input-group textarea {
+        padding-top: 1rem;
+        max-width: 25rem;
+        max-height: 3rem;
+    }
+    
+    .field {
+        background: transparent;
+        border: none;
+        width: 20rem;
+        height: 3rem;
+        font-size: 1.5rem;
+        font-family: var(--font-secondary);
+        border-bottom: 2px dashed #636363;
+        outline: none;
+        margin: 2rem 0;
+    }
+    
+    .field-label {
+        position: absolute;
+        left: 0;
+        top: 2rem;
+        font-family: var(--font-secondary);
+        text-transform: uppercase;
+        font-size: 1.2rem;
+        transition: all .3s;
+    }
+    
+    .field:focus~label {
+        top: 0;
+        font-size: 1rem;
+    }
+    
+    .field:focus {
+        border-bottom: 2px solid;
+    }
+    
+    .btn-subimit {
+        font-family: var(--font-action);
+        font-size: 1.1rem;
+        color: #3e3e99;
+        background: linear-gradient(to right, #00b4db, #0083b0);
+        padding: 1rem 1rem;
+        border-radius: .5rem;
+        text-shadow: .05rem .05rem rgba(0, 0, 0, .8);
+        width: 8.5rem;
+        height: 2.5rem;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    
+    .btn-subimit:hover {
+        color: rgb(211, 211, 211);
+        cursor: pointer;
+        transition: .7s;
+        opacity: .8;
     }
