--- a/stlyle.css
+++ b/stlyle.css
@@ -530,6 +530,7 @@
         padding-top: 1rem;
         max-width: 25rem;
         max-height: 3rem;
+        overflow: hidden;
     }
     
     .field {
