--- a/stlyle.css
+++ b/stlyle.css
@@ -739,3 +739,243 @@
         border-radius: .5rem;
         z-index: 152;
     }
+    
+    @media (max-width: 1440px) {
+        html {
+            font-size: 62.5%;
+        }
+    }
+    
+    @media (max-width: 1124px) {
+        html {
+            font-size: 55%;
+        }
+        .sessao-clientes div {
+            width: 75%;
+        }
+        .orcamento-wrapper {
+            height: 46%;
+        }
+    }
+    
+    @media (max-width: 926px) {
+        .sessao-clientes div {
+            width: 80%;
+        }
+        .sessao-orcamento div {
+            width: 75%;
+        }
+    }
+    
+    @media (max-width: 782px) {
+        html {
+            font-size: 51%;
+        }
+        .hamburger {
+            width: 3rem;
+        }
+        .conhecimento:nth-child(1) {
+            grid-column: 3/7;
+            grid-row: 1/4;
+        }
+        .conhecimento:nth-child(2) {
+            grid-column: 3/7;
+            grid-row: 3/5;
+        }
+        .conhecimento:nth-child(3) {
+            grid-column: 3/7;
+            grid-row: 5/-1;
+        }
+        .conhecimento:nth-child(4) {
+            grid-column: 11/15;
+            grid-row: 1/3;
+        }
+        .conhecimento:nth-child(5) {
+            grid-column: 11/15;
+            grid-row: 3/5;
+        }
+        .conhecimento:nth-child(6) {
+            grid-column: 11/15;
+            grid-row: 5/-1;
+        }
+        .sessao-clientes input {
+            width: 25rem;
+        }
+        .sessao-clientes img {
+            height: 78%
+        }
+        .sessao-clientes div {
+            width: 60%;
+            height: 43%;
+        }
+        input[type="date" i] {
+            width: 13rem;
+        }
+    }
+    
+    @media (max-width: 703px) {
+        html {
+            font-size: 45%;
+        }
+        .line {
+            margin: 1px;
+        }
+        .show-menu #line1 {
+            transform: rotate(45deg) translate(0.6rem, 0.7rem);
+        }
+        .show-menu #line3 {
+            transform: rotate(-45deg) translate(.3rem, -.3rem);
+        }
+    }
+    
+    @media (max-width: 614px) {
+        html {
+            font-size: 45%;
+        }
+        .sessao-clientes div {
+            width: 75%;
+        }
+        .sessao-clientes input {
+            width: 25rem;
+        }
+        input[type="date" i] {
+            width: 13rem;
+        }
+        .sessao-orcamento input {
+            width: 20rem;
+        }
+    }
+    
+    @media (max-width: 556px) {
+        .sessao-orcamento div {
+            width: 83%;
+            height: 40%;
+        }
+    }
+    
+    @media (max-width: 508px) {
+        .conhecimentos {
+            margin: 1rem;
+        }
+        .conhecimento:nth-child(1) {
+            grid-column: 1/7;
+            grid-row: 1/4;
+        }
+        .conhecimento:nth-child(2) {
+            grid-column: 1/7;
+            grid-row: 3/5;
+        }
+        .conhecimento:nth-child(3) {
+            grid-column: 1/7;
+            grid-row: 5/-1;
+        }
+        .conhecimento:nth-child(4) {
+            grid-column: 11/17;
+            grid-row: 1/3;
+        }
+        .conhecimento:nth-child(5) {
+            grid-column: 11/17;
+            grid-row: 3/5;
+        }
+        .conhecimento:nth-child(6) {
+            grid-column: 11/17;
+            grid-row: 5/-1;
+        }
+        .conhecimentos-img-wrapper {
+            grid-column: 7/11;
+            grid-row: 3/6;
+            width: 100%;
+        }
+        .sessao-clientes input {
+            width: 18rem;
+        }
+        .sessao-orcamento input {
+            width: 17rem;
+        }
+        input[type="date" i] {
+            width: 13rem;
+        }
+        .btn {
+            margin-left: 1rem;
+        }
+    }
+    
+    @media (max-width: 450px) {
+        .sessao-orcamento input {
+            width: 15rem;
+        }
+        .sessao-orcamento img {
+            width: 15rem;
+        }
+        .sessao-clientes button {
+            margin-left: 1rem;
+        }
+        input[type="date" i] {
+            margin-left: 1rem;
+        }
+        .sessao-clientes img {
+            margin-left: 0rem;
+            margin-right: 1rem;
+        }
+    }
+    
+    @media (max-width: 405px) {
+        .sessao-orcamento div {
+            width: 90%;
+            height: 37%;
+        }
+        .sessao-clientes div {
+            width: 80%;
+            height: 36%;
+        }
+        .sessao-clientes input {
+            font-size: 1.2rem;
+        }
+        input[type="date" i] {
+            margin-bottom: 2.2rem;
+        }
+        .sessao-clientes button {
+            margin-bottom: 2.8rem;
+        }
+        .footer-content {
+            width: 100%;
+        }
+    }
+    
+    @media (max-width: 375px) {
+        .conhecimento-text {
+            font-weight: 600;
+        }
+        .sessao-clientes div {
+            width: 85%;
+            height: 35%;
+        }
+        .sessao-clientes input {
+            width: 15rem;
+        }
+        input[type="date" i] {
+            width: 13rem;
+        }
+        .contato-wrapper {
+            width: 70%;
+        }
+        .sessao-orcamento img {
+            width: 13rem;
+            margin-right: -1rem;
+        }
+    }
+    
+    @media (max-width: 357px) {
+        .conhecimento-text {
+            font-size: 0.85rem;
+        }
+        .sessao-orcamento img {
+            width: 9rem;
+        }
+        input[type="date" i] {
+            width: 13rem;
+        }
+        .sessao-clientes input {
+            width: 13rem;
+        }
+    }
