--- a/stlyle.css
+++ b/stlyle.css
@@ -758,6 +758,22 @@
         }
     }
     
+    @media (max-width:1024px) {
+        .hamburger {
+            width: 3rem;
+        }
+        .line {
+            margin: 2px;
+        }
+        .sessao-clientes div {
+            width: 63%;
+            height: 33%;
+        }
+        .orcamento-wrapper {
+            height: 33%;
+        }
+    }
+    
     @media (max-width: 926px) {
         .sessao-clientes div {
             width: 80%;
@@ -773,6 +789,9 @@
         }
         .hamburger {
             width: 3rem;
+        }
+        .line {
+            margin: 1px;
         }
         .conhecimento:nth-child(1) {
             grid-column: 3/7;
@@ -853,6 +872,13 @@
         }
     }
     
+    @media (max-width: 540px) {
+        .sessao-orcamento div {
+            width: 80%;
+            height: 43%;
+        }
+    }
+    
     @media (max-width: 508px) {
         .conhecimentos {
             margin: 1rem;
@@ -919,6 +945,12 @@
         }
     }
     
+    @media (max-width: 414px) {
+        .sessao-orcamento div {
+            height: 42%;
+        }
+    }
+    
     @media (max-width: 405px) {
         .sessao-orcamento div {
             width: 90%;
@@ -948,7 +980,7 @@
         }
         .sessao-clientes div {
             width: 85%;
-            height: 35%;
+            height: 42%;
         }
         .sessao-clientes input {
             width: 15rem;
@@ -962,6 +994,18 @@
         .sessao-orcamento img {
             width: 13rem;
             margin-right: -1rem;
+        }
+        .sessao-orcamento div {
+            height: 48%;
+        }
+    }
+    
+    @media (max-width: 360px) {
+        .sessao-clientes div {
+            height: 44%;
+        }
+        .sessao-orcamento div {
+            height: 49%;
         }
     }
     
@@ -977,5 +1021,67 @@
         }
         .sessao-clientes input {
             width: 13rem;
+        }
+    }
+    
+    @media (max-width: 320px) {
+        .sessao-orcamento div {
+            width: 92%;
+            height: 56%;
+        }
+        .contato-wrapper {
+            width: 79%;
+        }
+        .sessao-clientes div {
+            height: 50%;
+        }
+    }
+    
+    @media (max-width: 280px) {
+        .conhecimento:nth-child(2) {
+            grid-column: 1/7;
+            grid-row: 4/5;
+        }
+        .conhecimento:nth-child(3) {
+            grid-column: 1/8;
+            grid-row: 7/-1;
+        }
+        .conhecimento:nth-child(5) {
+            grid-column: 11/17;
+            grid-row: 4/5;
+        }
+        .conhecimento:nth-child(6) {
+            grid-column: 10/17;
+            grid-row: 7/-1;
+        }
+        .conhecimentos-img-wrapper {
+            grid-column: 1/18;
+            grid-row: 2/7;
+            width: 100%;
+            opacity: 0.1;
+            z-index: 0;
+        }
+        .sessao-orcamento div {
+            width: 96%;
+            height: 49%;
+        }
+        .contato-wrapper {
+            width: 91%;
+        }
+        .sessao-orcamento input {
+            margin-left: 2rem;
+            width: 13rem;
+        }
+        .sessao-orcamento img {
+            width: 7rem;
+        }
+        .sessao-clientes div {
+            width: 95%;
+            height: 43%;
+        }
+        .footer-content p {
+            font-size: .95rem;
+            font-weight: 600;
+            margin-left: .5rem;
         }
     }
